fix on view on mobile

--- a/main.css
+++ b/main.css
@@ -33,7 +33,6 @@ h4,
 h5 {
   margin: 0;
   text-transform: uppercase;
-  text-align: center;
 }
 
 i {
@@ -49,7 +48,7 @@ audio {
 
 .container {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   text-align: center;
   background: var(--bg-color);
 }
@@ -129,6 +128,7 @@ audio {
 
 .aside__h5 {
   font-family: 'Audiowide', cursive;
+  text-align: left;
   color: var(--primary-color);
 }
 
@@ -151,6 +151,7 @@ audio {
   display: flex;
   justify-content: center;
   align-items: flex-start;
+  flex-wrap: wrap;
 }
 
 .container__h4--secondary {
@@ -174,6 +175,7 @@ audio {
 
 .aside__div--key {
   margin-bottom: 5px;
+  flex-wrap: nowrap;
 }
 
 .modal--hide {
@@ -185,4 +187,19 @@ audio {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+}
+
+/* Media Queries */
+
+@media (max-width: 940px) {
+  .canvas {
+    width: 100%;
+    margin: 30px 20px;
+  }
+}
+
+@media (max-width: 480px) {
+  .modal {
+    width: 100%;
+  }
 }
